--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
+    "styled-component": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
